// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`hero three parts fullheight success 1`] = `
<section
  className="hero is-fullheight is-info"
>
  <div
    class="hero-head"
  >
    <nav
      className="navbar"
    >
      <div
        className="navbar-brand"
      >
        <a
          className="navbar-item"
        >
          <img
            src="https://bulma.io/images/bulma-type-white.png"
          />
        </a>
      </div>
      <div
        className="navbar-menu"
      >
        <div
          className="navbar-start"
        >
          
        </div>
        <div
          className="navbar-end"
        >
          <a
            className="navbar-item active"
          >
            Home
          </a>
          <a
            className="navbar-item undefined"
          >
            Examples
          </a>
          <a
            className="navbar-item undefined"
          >
            Documentation
          </a>
          <a
            className="navbar-item undefined"
          >
            <button
              className="button is-primary is-inverted"
              disabled={false}
            >
              <span
                className="icon"
              >
                <i
                  className="fab fa-github"
                />
              </span>
              <span>
                Github
              </span>
            </button>
          </a>
        </div>
      </div>
    </nav>
  </div>
  <div
    className="hero-body"
  >
    <div
      className="container has-text-centered"
    >
      <h1
        className="title is-1"
      >
        Title
      </h1>
      <h2
        className="subtitle is-2"
      >
        Subtitle
      </h2>
    </div>
  </div>
  <div
    class="hero-foot"
  >
    <div
      className="tabs is-boxed is-fullwidth"
    >
      <ul>
        <li
          className="active"
        >
          <a>
            Overview
          </a>
        </li>
        <li>
          <a>
            Modifiers
          </a>
        </li>
        <li>
          <a>
            Grid
          </a>
        </li>
        <li>
          <a>
            Elements
          </a>
        </li>
        <li>
          <a>
            Components
          </a>
        </li>
        <li>
          <a>
            Layout
          </a>
        </li>
      </ul>
    </div>
  </div>
</section>
`;

exports[`hero three parts fullheight success 2`] = `
<section
  className="hero is-fullheight is-success"
>
  <div
    class="hero-head"
  >
    <nav
      className="navbar"
    >
      <div
        className="navbar-brand"
      >
        <a
          className="navbar-item"
        >
          <img
            src="https://bulma.io/images/bulma-type-white.png"
          />
        </a>
      </div>
      <div
        className="navbar-menu"
      >
        <div
          className="navbar-start"
        >
          
        </div>
        <div
          className="navbar-end"
        >
          <a
            className="navbar-item active"
          >
            Home
          </a>
          <a
            className="navbar-item undefined"
          >
            Examples
          </a>
          <a
            className="navbar-item undefined"
          >
            Documentation
          </a>
          <a
            className="navbar-item undefined"
          >
            <button
              className="button is-primary is-inverted"
              disabled={false}
            >
              <span
                className="icon"
              >
                <i
                  className="fab fa-github"
                />
              </span>
              <span>
                Github
              </span>
            </button>
          </a>
        </div>
      </div>
    </nav>
  </div>
  <div
    className="hero-body"
  >
    <div
      className="container has-text-centered"
    >
      <h1
        className="title is-1"
      >
        Title
      </h1>
      <h2
        className="subtitle is-2"
      >
        Subtitle
      </h2>
    </div>
  </div>
  <div
    class="hero-foot"
  >
    <div
      className="tabs is-boxed is-fullwidth"
    >
      <ul>
        <li
          className="active"
        >
          <a>
            Overview
          </a>
        </li>
        <li>
          <a>
            Modifiers
          </a>
        </li>
        <li>
          <a>
            Grid
          </a>
        </li>
        <li>
          <a>
            Elements
          </a>
        </li>
        <li>
          <a>
            Components
          </a>
        </li>
        <li>
          <a>
            Layout
          </a>
        </li>
      </ul>
    </div>
  </div>
</section>
`;

exports[`hero three parts medium primary 1`] = `
<section
  className="hero is-medium is-primary"
>
  <div
    class="hero-head"
  >
    <nav
      className="navbar"
    >
      <div
        className="navbar-brand"
      >
        <a
          className="navbar-item"
        >
          <img
            src="https://bulma.io/images/bulma-type-white.png"
          />
        </a>
      </div>
      <div
        className="navbar-menu"
      >
        <div
          className="navbar-start"
        >
          
        </div>
        <div
          className="navbar-end"
        >
          <a
            className="navbar-item active"
          >
            Home
          </a>
          <a
            className="navbar-item undefined"
          >
            Examples
          </a>
          <a
            className="navbar-item undefined"
          >
            Documentation
          </a>
          <a
            className="navbar-item undefined"
          >
            <button
              className="button is-primary is-inverted"
              disabled={false}
            >
              <span
                className="icon"
              >
                <i
                  className="fab fa-github"
                />
              </span>
              <span>
                Github
              </span>
            </button>
          </a>
        </div>
      </div>
    </nav>
  </div>
  <div
    className="hero-body"
  >
    <div
      className="container has-text-centered"
    >
      <h1
        className="title is-1"
      >
        Title
      </h1>
      <h2
        className="subtitle is-2"
      >
        Subtitle
      </h2>
    </div>
  </div>
  <div
    class="hero-foot"
  >
    <div
      className="tabs is-boxed is-fullwidth"
    >
      <ul>
        <li
          className="active"
        >
          <a>
            Overview
          </a>
        </li>
        <li>
          <a>
            Modifiers
          </a>
        </li>
        <li>
          <a>
            Grid
          </a>
        </li>
        <li>
          <a>
            Elements
          </a>
        </li>
        <li>
          <a>
            Components
          </a>
        </li>
        <li>
          <a>
            Layout
          </a>
        </li>
      </ul>
    </div>
  </div>
</section>
`;
